Spacing issue

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,8 @@ nav {
 .hamburger-icon,
 .hamburger-icon-close,
 #hamburger-check,
-.nav-gradient {
+.nav-gradient,
+label {
   display: none;
 }
 
@@ -270,6 +271,10 @@ h1 {
   .hamburger-icon {
     display: block;
     cursor: pointer;
+  }
+
+  label {
+    display: block;
   }
 
   .nav-links {
